# fast_api_template

./: .gitignore  README.md  pyproject.toml  session.json  websocket.py
fast_xabhelper/: README.md  __init__.py  console_manage.py  database.py  db_helper.py  froms.py  helpful.py  manage.py  manage_logic.py  mount_logic.py  session.json  settings_logic.py
fast_xabhelper/admin_pack/: README.md  admin_base.py  admin_conf.py  fast_admin.py  fast_edit.py  fast_login.py  fast_panel.py
fast_xabhelper/admin_pack/src/: App.svelte
fast_xabhelper/database_pack/: README.md  castom_sql_type.py  db_helper.py  froms.py
fast_xabhelper/session_pack/: README.md  fast_session.py  session_base.py
fast_xabhelper/svelte_pack/: .gitignore  __env.env  conf.py  package.json  webpack.config.js
fast_xabhelper/user_pack/: README.md  admin.py  fast_user.py  model.py  uesr_model.py  user_base.py
project_name/: Makefile  admin.py  api.py  app.py  database.py  main.py  mount.py  settings.py
project_name/photo/: admin.py  model.py
project_name/session_pack/: fast_session.py  session_base.py
project_name/static/: styles.css
project_name/static_pack/: static_logic.py
project_name/user_pack/: fast_user.py  uesr_model.py
vetcin_pack_fastapi/: IREADME.md  VREADME.md  __init__.py  console_logic.py  depends_utile.py  helpful.py  http_helpful.py  manage_base.py  manage_logic.py  mount_logic.py  settings_logic.py
vetcin_pack_fastapi/database_pack/: base.py  model_logic.py
vetcin_pack_fastapi/session_pack/: api.py  base.py
vetcin_pack_fastapi/user_pack/: base.py
(+16 files in other folders)
