[tool.poetry]
name = "vetcin_pack_fastapi"
version = "0.1.0"
description = ""
authors = ["Musha Vetcin"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
orjson = "^3.7.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.37"
click = "^8.1.3"
logsmal = "^0.0.15"
mg-sql = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
